updated the footer padding so everything fits well.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Tax Calculator</title>
   </head>
   <body>
+    <h1 style = "text-align: center;">Tax Calculator</h1>
     <div class="container">
       <div class="formDiv">
         <form class="formMain">
